import { boolean, index, integer, jsonb, pgTable, text, uuid } from 'drizzle-orm/pg-core';

import { auditColumns } from './_columns.js';
import { videos } from './videos.js';

// Global (shared across all tenants) -- no RLS.
export const transcripts = pgTable(
  'transcripts',
  {
    id: uuid('id').primaryKey().defaultRandom(),
    videoId: uuid('video_id')
      .notNull()
      .unique()
      .references(() => videos.id, { onDelete: 'cascade' }),
    rawText: text('raw_text'),
    language: text('language'),
    isAutoGenerated: boolean('is_auto_generated').notNull().default(true),
    summary: text('summary'),
    hookText: text('hook_text'),
    hookEndSecs: integer('hook_end_secs'),
    ctaText: text('cta_text'),
    endingText: text('ending_text'),
    sections: jsonb('sections'),
    wordCount: integer('word_count'),
    ...auditColumns(),
  },
  (table) => [index('idx_transcripts_video_id').on(table.videoId)],
);
